# kickoff

./: .gitignore  Cargo.toml  flake.nix
src/: cli.rs  color.rs  config.rs  consumers.rs  executors.rs  font.rs  gui.rs  history.rs  keybinds.rs  main.rs  providers.rs  selection.rs
