[package]
name = "kickoff"
version = "0.5.0"
authors = ["Folke Gleumes <folke-kickoff@gleumes.org>"]
edition = "2018"
description = "Fast and minimal program launcher"
license = "GPL-3.0-or-later"
homepage = "https://github.com/j0ru/kickoff"
repository = "https://github.com/j0ru/kickoff"
readme = "README.md"
keywords = ["wayland", "launcher", "wlroots"]

[dependencies]
wayland-client = "0.29.4"
smithay-client-toolkit = "0.15.3"
fontdue = "0.7.2"
image = { version = "0.24.1", default_features = false }
fuzzy-matcher = "0.3.7"
nix = "0.23.1"
shellwords = "1.1.0"
css-color = "0.2.4"
exec = "0.3.1"
xdg = "2.4.1"
toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"] }
smithay-clipboard = "0.6.5"
log = "0.4.16"
simplelog = "0.11.1"
x11-keysymdef = "0.2.0"
fontconfig = "0.5.0"
notify-rust = "4.5.8"
clap = { version = "3.1.8", features = ["derive"] }

[dependencies.tokio]
version = "1.17.0"
features = ["fs", "time", "io-util", "rt", "macros", "rt-multi-thread"]
